commit d042f8f06b313e8595087587455daac73d84f17b
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-05-15 20:01:28 +0200

    Start of an Steps 1/2 calculator in R

commit b052bf8d1e090e07bf0853f0aa8b895db8f41a2a
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-03-29 19:24:37 +0200

    Make it possible to use expressions in axis labels

commit d69fda8d8f854b735394ecdaec9d59fb18c42b00
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-03-28 10:09:45 +0200

    Update Changelog

commit 90e5ff0a9fdadd65e179c04c7d43b4db6e301984
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-03-06 17:59:16 +0100

    Move static docs to pkdown.jrwb.de, update them

commit 68e36eb0a5f1b611588d47f77e0ef7c3d9ba0beb
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-03-01 11:37:31 +0100

    The package is not in subdir `pkg` any more

commit f67ea0c4aeb68631e9f93c95e86c14364718477a
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-01-31 07:33:21 +0100

    Small documentation fix

commit 4e696997516543e29119e94d67283f513be4484d
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-01-30 18:08:50 +0100

    Regenerate static documentation

commit 03bda75d343402dad99df2aad55611e11279b833
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-01-30 18:04:53 +0100

    Correct psm file in the example with metabolites

commit 39d202b0a0f833c756bc98fb4961483de1b15353
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-01-30 16:14:15 +0100

    Ignore windows binary builds in git and in R package

commit e6bb9654679f43af6958d6e28cb5206abb91d574
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-01-30 16:10:30 +0100

    Test reproducing the FOCUS Summary information
    
    generated from the FOCUS PELMO GUI, as copied into the text files
    in the testdata directory.

commit 80b451ddb4e749041c2b216603274a012dc83d59
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-01-30 14:28:23 +0100
