@@ -8,7 +8,8 @@ PEC_sw_focus(parent, rate, n = 1, i = NA, met = NULL, f_drift = NA,
   f_rd = 0.1, scenario = FOCUS_Step_12_scenarios$names)
 }
 \arguments{
-\item{parent}{A list containing substance specific parameters}
+\item{parent}{A list containing substance specific parameters, e.g.
+conveniently generated by \code{\link{chent_focus_sw}}.}
 
 \item{rate}{The application rate in g/ha. Overriden when
 applications are given explicitly}
@@ -17,12 +18,13 @@ applications are given explicitly}
 
 \item{i}{The application interval}
 
-\item{met}{A list containing metabolite specific parameters. If not NULL, 
+\item{met}{A list containing metabolite specific parameters.  e.g.
+conveniently generated by \code{\link{chent_focus_sw}}.  If not NULL,
 the PEC is calculated for this compound, not the parent.}
 
 \item{f_drift}{The fraction of the application rate reaching the waterbody
 via drift. If NA, this is derived from the scenario name and the number
-of applications via the drift data defined by the 
+of applications via the drift data defined by the
 \code{\link{FOCUS_Step_12_scenarios}}}
 
 \item{f_rd}{The fraction of the amount applied reaching the waterbody via
@@ -42,9 +44,12 @@ this implementation.
 \note{
 The formulas for input to the waterbody via runoff/drainage of the
   parent and subsequent formation of the metabolite in water is not
-  documented in the model description coming with the calculator
+  documented in the model description coming with the calculator. As one would
+  expecte, this additional input appears to be (as we get the same results)
+  calculated by multiplying the application rate with the molar weight
+  correction and the formation fraction in water/sediment systems.
 
-Step 2 is not implemented
+Step 2 is not implemented.
 }
 \examples{
 # Parent only
